# veric

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE.md  flake.nix
src/: emit.rs  index.rs  lib.rs  loader.rs  main.rs  tests.rs  verify.rs
tests/multi/errors/: circular_a.aski  circular_b.aski  missing_import.aski
tests/multi/valid/: app.aski  core.aski
tests/single/: simple.aski
